cmake_minimum_required(VERSION 3.5)
project(ukf)
find_package(Eigen3 REQUIRED) 
message("Eigen3: " ${EIGEN3_INCLUDE_DIR})
set(CMAKE_CXX_STANDARD 11)
include_directories(${EIGEN3_INCLUDE_DIR})
set(SOURCE_FILES main.cpp ukf_cv.cpp ukf_cv.h measurement_package.h ground_truth_package.h)
add_executable(ukf ${SOURCE_FILES})